yaml/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpledataredundant
  namespace: demo-circuitbreaker
spec:
  selector:
    matchLabels:
      app: simpledataredundant
  replicas: 1
  template:
    metadata:
      name: simpledataredundant
      labels:
        app: simpledataredundant
        version: v2
    spec:
      containers:
      - name: simpledataredundant
        image: ailtonmsj/simpledataredundant:v3
        imagePullPolicy: Always
