yaml/04-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpledataredundant-vs
  namespace: demo-circuitbreaker
spec:
  hosts:
  - simpledataredundant.teste.com.br
  gateways:
  - demo-circuitbreaker/simpledataredundant-gateway
  http:
  - route:
    - destination:
        host: simpledataredundant.demo-circuitbreaker.svc.cluster.local
        port:
          number: 8080
        subset: v2
      weight: 100
