yaml/05-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpledataredundant-destination-rule
  namespace: demo-circuitbreaker
spec:
  host: simpledataredundant.demo-circuitbreaker.svc.cluster.local
  subsets:
  - name: v2
    labels:
      version: v2
